2004-08-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(SSL_MODE_ENABLE_PARTIAL_WRITE): New constant.
	(SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER): New constant.
	(SSL_MODE_AUTO_RETRY): New constant.
	(SSL_MODE_NO_AUTO_CHAIN): New constant.

2004-05-14  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(SSL_CTX_use_certificate_chain_file): New binded routine.

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(SSL_CTX_use_certificate_chain_file): New routine stub.

2004-04-22  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(ERR_error_string_n): Out parameter have to be pointer.

2004-03-23  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(SSL_ERROR_*): New constants.
	(SSL_get_error): New routine.

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(SSL_get_error): New routine.

2004-03-10  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads, ssl-wrappers.ads, ssl-wrappers.adb:
	Update copyright years.

2004-03-09  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads, ssl-wrappers.ads, ssl-wrappers.adb:
	(SSLeay): New routine.

2004-02-20  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(ssl-wrappers): Renamed to ssl-wrappers.o.
	($(LIBNOSSLAWS)): Add dependance to ssl-wrappers.o.
	(build): Remove dependance from ssl-wrappers.
	Fix libnosslaws.a build, properly remove ssl-wrappers.o as this
	 must not be included in the standard AWS library.

2004-01-30  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(.SILENT): Simplify.

2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.gpr:
	(Languages): Add support for Ada, ChangeLog and Project files.
	(Source_Files): Add ChangeLog and ssl.gpr.

2003-12-20  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.gpr:
	(Ide): New package.

2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(X509_free): New routine.

	* ssl-thin.ads:
	(X509_free): New routine.
	(X509_NAME_oneline): Fix spec.

2003-12-17  Pascal Obry  <p.obry@wanadoo.fr>
